service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080    # nginx-unprivileged listens on 8080 (was: 80)
      nodePort: 30080
